# ios-screen-time-screenshot-processing

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/setup-auto-updates/: SKILL.md
.claude/skills/setup-dual-mode/: SKILL.md
.claude/skills/setup-offline-storage/: SKILL.md
.claude/skills/setup-tauri/: SKILL.md
.claude/skills/setup-testing-pipeline/: SKILL.md
.claude/skills/setup-wasm-worker/: SKILL.md
.claude/skills/testing-encyclopedia/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  contract-checks.yml  deploy.yml  tauri-build.yml
alembic/versions/: 3613c2977638_add_missing_columns_annotation_status_.py  i7j8k9l0m1n2_add_processing_started_at.py
auto/: AUTORESEARCH-AGENT.md  autoresearch-rust.md  autoresearch-rust.sh  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.md  autoresearch.sh
crates/processing/: Cargo.toml
crates/processing/src/: bar_extraction.rs  boundary_optimizer.rs  generated_constants.rs  image_utils.rs  lib.rs  ocr.rs  pipeline.rs  types.rs
crates/processing/src/grid_detection/: line_based.rs  mod.rs  ocr_anchored.rs  strategies.rs
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.wasm.yml  docker-compose.yml
docker/backend/: Dockerfile  Dockerfile.ci  Dockerfile.dev  entrypoint.sh
docker/frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-entrypoint.sh
docker/nginx/: nginx.conf
docker/paddleocr-server/: Dockerfile
docs/audits/: production-readiness-audit.md  workflow-review.md
docs/reviews/: 006-security-review.md  007-code-quality-review.md  008-performance-review.md  009-error-handling-review.md  010-api-consistency-review.md  011-schema-source-of-truth.md  012-production-readiness.md  013-ui-ux-review.md  014-data-management.md  015-code-organization.md  019-backend-refactoring-analysis.md  026-comprehensive-analysis.md  027-production-readiness-review.md  028-folder-structure-cleanup.md  codebase-review-2025-12-18.md  comprehensive-ux-logic-review-2025-12-18.md  proposed-solutions-2025-12-18.md
docs/superpowers/plans/: 2026-03-10-wasm-preprocessing-pipeline.md  2026-03-12-processing-settings.md  2026-03-17-server-rust-wiring.md  2026-03-17-wasm-browser-rust-wiring.md
frontend/: .gitignore  eslint.config.js  index.html  openapi.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: check-contract-drift.sh
frontend/server/: build.ts  dev.ts
frontend/src/: App.tsx  config.ts  env.d.ts  index.css  main.tsx  service-worker.ts  sw-custom.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/benches/: processing_benchmark.rs
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/examples/: bench_pipeline.rs
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/processing/: bar_extraction.rs  generated_constants.rs  image_utils.rs  pipeline.rs
frontend/src-tauri/src/processing/grid_detection/: line_based.rs  mod.rs  strategies.rs
frontend/src/components/: ErrorBoundary.tsx
frontend/src/config/: environment.ts
frontend/src/constants/: processingStatus.ts
frontend/src/core/: errors.ts  index.ts
frontend/src/hooks/: useAnnotationWithDI.ts  useAuth.ts  useAutoSave.ts  useGridProcessing.ts  usePreprocessingWithDI.ts  useScreenshotImage.ts  useServices.ts  useWebSocket.ts
frontend/src/lib/: updater.ts
frontend/src/pages/: AdminPage.tsx  AnnotationPage.tsx  ConsensusComparisonPage.tsx  ConsensusPage.tsx  HomePage.tsx  PreprocessingPage.tsx  SettingsPage.tsx  UploadPage.tsx  WASMPreprocessingPage.tsx
frontend/src/services/: apiClient.ts  websocket.ts
frontend/src/store/: authStore.ts  createAnnotationStore.ts  preprocessingStore.ts  settingsStore.ts  themeStore.ts
frontend/src/types/: api-schema.ts  index.ts  pwa-register.d.ts  websocket.ts
frontend/src/utils/: filePathParser.ts  formatters.ts  imageUtils.ts  sanitize.ts  toastWithRetry.tsx
frontend/tests/: auth.setup.ts  spa-server.py
frontend/tests/accessibility/: accessibility.spec.ts
frontend/tests/e2e/: admin.spec.ts  annotation.spec.ts  auth.spec.ts  capture-screenshots.spec.ts  complete-workflow.spec.ts  consensus.spec.ts  export.spec.ts  (+11 more)
rust-python/: Cargo.toml
rust-python/src/: lib.rs
rust-python/src/processing/: bar_extraction.rs  ocr.rs
rust-python/src/processing/grid_detection/: ocr_anchored.rs  strategies.rs
scripts/: backup-db.sh  benchmark_backend.py  check-licenses.sh  check-tauri-contract.py  compare_all_ocr_engines.py  compare_ocr_engines.py  generate-shared-constants.py  profile_pipeline.py  restore-db.sh  test-all.sh  test_hybrid_all_use_cases.py  test_hybrid_engine.py  upload_test_images.py
src/screenshot_processor/: __init__.py
tests/: conftest.py
tests/benchmark/: test_benchmarks.py  test_matrix_benchmarks.py
tests/contract/: test_cross_implementation_parity.py  test_single_source_of_truth.py
tests/fuzz/: test_api_fuzz.py  test_input_fuzzing.py
tests/golden/: test_golden_files.py
tests/integration/: test_admin_api.py  test_annotation_api.py  test_annotation_edge_cases.py  test_annotation_workflow.py  test_auth_guards.py  test_consensus_api.py  test_consensus_workflow.py  test_database_constraints.py  test_full_workflow.py  test_preprocessing_api.py  test_screenshot_api.py  test_screenshot_edge_cases.py  test_screenshot_status_workflow.py  test_stage_image.py  test_stats_workflow.py  test_upload_api.py  test_upload_edge_cases.py  test_upload_workflow.py  test_verification_api.py  test_verification_tiers.py
tests/unit/: test_architecture.py  test_auth.py  test_concurrent.py  test_core_usage.py  test_cross_impl_parity.py  test_migration_roundtrip.py  test_ocr_engines.py  test_ocr_extraction.py  test_ocr_factory.py  test_processing_pipeline.py  test_processing_service_rust_path.py  test_property_based.py  test_rust_accelerator_new_wrappers.py  test_snapshots.py  test_websocket_manager.py
(+199 files in other folders)
