[package]
name = "ios-screen-time"
version = "0.1.0"
edition = "2021"
description = "iOS Screen Time Screenshot Processing desktop app"

[lib]
name = "ios_screen_time"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
